--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -261,8 +261,12 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 
 \subsection*{Art\'iculos de divulgaci\'on}
-\noindent
-\years{2013} Jon Luly, Gerardo Mart\'in; Lee Skerratt. 30 April 2013. \textbf{Breaking up bat colonies doesn't eliminate health risks}. \emph{The Conversation}\footnote{\url{http://theconversation.com/breaking-up-bat-colonies-doesnt-eliminate-health-risks-13580}}
+
+\years{2021} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{\emph{The Applied Ecologist}}.\\
+
+\years{2020} Colin Simpfendorfer \& Gerardo Mart\'in. \textbf{Protected high-value reefs and movement pathways improve conservation of reef sharks}. \href{https://appliedecologistsblog.com/2020/07/30/protected-high-value-reefs-and-movement-pathways-improve-conservation-of-reef-sharks/}{\emph{The Applied Ecologist}}.\\
+
+\years{2013} Jon Luly, Gerardo Mart\'in Lee Skerratt. 30 April 2013. \textbf{Breaking up bat colonies doesn't eliminate health risks}. \href{http://theconversation.com/breaking-up-bat-colonies-doesnt-eliminate-health-risks-13580}{\emph{The Conversation}}
 
 
 \subsection*{Pl\'aticas y p\'osters}
