Añadi curso de MPPs

--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -97,7 +97,7 @@ bookmarks, colorlinks, breaklinks,
 \begin{document}
 
 {\LARGE Gerardo Antonio Mart\'in Mu\~noz de Cote \orcidA{}}\\ [0.5cm]
-{\small PhD., MSc. Biol. Cons., MVZ.}\\[0.5cm]
+{\small PhD., MSc. Biol. Cons., MVZ. --- SNI I}\\[0.5cm]
 {\large Curriculumvit\ae}\\
 {\small \today}\\[0.5cm]
 
@@ -125,7 +125,7 @@ Nacionalidad:  Mexicano
 
 %%\hrule
 \section*{\'Areas de especializaci\'on}
-Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bullet $ Estad\'istica espacial $ \bullet $ Problemas inversos aplicados en ecolog\'ia $ \bullet $ Biolog\'ia de Conservaci\'on $ \bullet $ Ecolog\'ia de enfermedades infecciosas $ \bullet $ Apliciones ecol\'ogicas en salud p\'ublica $ \bullet $ Eco-epidemiolog\'ia
+Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bullet $ Estad\'istica espacial $ \bullet $ Problemas inversos aplicados en ecolog\'ia $ \bullet $ Biolog\'ia de Conservaci\'on $ \bullet $ Ecolog\'ia de enfermedades infecciosas $ \bullet $ Aplicaciones ecol\'ogicas en salud p\'ublica $ \bullet $ Eco-epidemiolog\'ia
 
 \section*{Educaci\'on}
 
