--- a/docs/CV/cv-espanol.tex
+++ b/docs/CV/cv-espanol.tex
@@ -69,6 +69,8 @@ bookmarks, colorlinks, breaklinks,
 ]{hyperref}  
 \hypersetup{linkcolor=blue,citecolor=blue,filecolor=black,urlcolor=MidnightBlue} 
 
+\usepackage{multicol}
+
 %ORCID
 \usepackage{tikz,xcolor,hyperref}
 
@@ -93,15 +95,16 @@ bookmarks, colorlinks, breaklinks,
 
 % DOCUMENT
 \begin{document}
+
 {\LARGE Gerardo Antonio Mart\'in Mu\~noz de Cote \orcidA{}}\\ [0.5cm]
-{\small PhD., MSc. Biol. Cons., MVZ.}\\[0.5cm]
+{\small PhD., MSc. Biol. Cons., MVZ. --- SNI I}\\[0.5cm]
 {\large Curriculumvit\ae}\\
 {\small \today}\\[0.5cm]
 
+\begin{multicols}{2}
 \begin{center}
-	\includegraphics[width=.4\linewidth]{Gerardo-OHRG-1-pequena}
+	\includegraphics[width=.7\linewidth]{yo}
 \end{center}
-\vspace{1.5cm}
 
 2$^a$ Privada Mapim\'i 610, Colonia Hip\'odromo\\
 Durango, DGO\\
@@ -116,9 +119,13 @@ E-mail:
 Fecha de nacimiento:  2 de marzo de 1981---Oxford, Inglaterra\\
 Nacionalidad:  Mexicano
 
+\end{multicols}
+
+\vspace{1.5cm}
+
 %%\hrule
 \section*{\'Areas de especializaci\'on}
-Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bullet $ Estad\'istica espacial $ \bullet $ Problemas inversos aplicados en ecolog\'ia $ \bullet $ Biolog\'ia de Conservaci\'on $ \bullet $ Ecolog\'ia de enfermedades infecciosas $ \bullet $ Apliciones ecol\'ogicas en salud p\'ublica $ \bullet $ Eco-epidemiolog\'ia
+Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bullet $ Estad\'istica espacial $ \bullet $ Problemas inversos aplicados en ecolog\'ia $ \bullet $ Biolog\'ia de Conservaci\'on $ \bullet $ Ecolog\'ia de enfermedades infecciosas $ \bullet $ Aplicaciones ecol\'ogicas en salud p\'ublica $ \bullet $ Eco-epidemiolog\'ia
 
 \section*{Educaci\'on}
 
@@ -203,9 +210,9 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \years{2021} Eyal Goldstein,Joseph Erinjery, \textbf{Gerardo, Mart\'in}; Anuradhani Kasturiratne, Dileepa Ediriweera, Janaka de Silva, Peter J. Diggle, Peter, David G. Lalloo, Kris A. Murray, \& Takyua Iwamura. \textbf{Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes}. \emph{PLoS Neglected Tropical Diseases}.\\
 
-\years{2020} Carlos Y\'a\~nez-Arenas, \textbf{Gerardo Mart\'in}, Luis Osorio-Olvera, Jazm\'in Escobar-Luj\'an, Sandra Casta\~no-Quintero \& Enrique Mart\'inez-Meyer. \textbf{The niche centrality hypothesis: key points about unfilled niches and the potential use of supraspecific modeling units}. \emph{Biodiversity Informatics}-\emph{en prensa}.\\
+\years{2020} Carlos Y\'a\~nez-Arenas, \textbf{Gerardo Mart\'in}, Luis Osorio-Olvera, Jazm\'in Escobar-Luj\'an, Sandra Casta\~no-Quintero \& Enrique Mart\'inez-Meyer. \textbf{The niche centrality hypothesis: key points about unfilled niches and the potential use of supraspecific modeling units}. \emph{Biodiversity Informatics}.\\
 
-\years{2020} \textbf{Gerardo Mart\'in}, Mario Espinoza, Michelle Heupel, \& Colin Simpfendorfer (2020). \textbf{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}. eISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.13706}.\\
+\years{2020} \textbf{Gerardo Mart\'in}, Mario Espinoza, Michelle Heupel, \& Colin Simpfendorfer (2020). \textbf{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}. eISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.13706}. \href{https://besjournals.onlinelibrary.wiley.com/doi/toc/10.1111/(ISSN)1365-2664.Southwood_Prize_2020}{Nominado al premio Southwood 2020 a mejor artículo de la revista}.\\
 
 \years{2019} Kris Murray, \textbf{Gerardo Mart\'in} \& Takuya Iwamura (2019). \textbf{Focus on snake ecology to fight snakebite}. \emph{The Lancet}. (19) 325. ISSN: 01406736. \url{https://doi.org/10.1016/S0140-6736(19)32510-3}\\
 
@@ -261,8 +268,12 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 
 \subsection*{Art\'iculos de divulgaci\'on}
-\noindent
-\years{2013} Jon Luly, Gerardo Mart\'in; Lee Skerratt. 30 April 2013. \textbf{Breaking up bat colonies doesn't eliminate health risks}. \emph{The Conversation}\footnote{\url{http://theconversation.com/breaking-up-bat-colonies-doesnt-eliminate-health-risks-13580}}
+
+\years{2021} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{\emph{The Applied Ecologist}}.\\
+
+\years{2020} Colin Simpfendorfer \& Gerardo Mart\'in. \textbf{Protected high-value reefs and movement pathways improve conservation of reef sharks}. \href{https://appliedecologistsblog.com/2020/07/30/protected-high-value-reefs-and-movement-pathways-improve-conservation-of-reef-sharks/}{\emph{The Applied Ecologist}}.\\
+
+\years{2013} Jon Luly, Gerardo Mart\'in Lee Skerratt. 30 April 2013. \textbf{Breaking up bat colonies doesn't eliminate health risks}. \href{http://theconversation.com/breaking-up-bat-colonies-doesnt-eliminate-health-risks-13580}{\emph{The Conversation}}
 
 
 \subsection*{Pl\'aticas y p\'osters}
