--- a/cursos_posg.Rmd
+++ b/cursos_posg.Rmd
@@ -3,7 +3,7 @@ title: "Cursos de posgrado"
 description: |
  Contenidos de los cursos de posgrado
 image: "imagenes/Cursos-lic.svg"
-output: postcards::trestles
+output: distill::distill_article
 ---
 
 [Modelación de nichos y áreas de distribución con MPPs](https://gerardommc.github.io/Modelacion-nichos-distr-PPMs/)
