--- a/publicaciones.Rmd
+++ b/publicaciones.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Publicaciones"
 image: "imagenes/Pubs.png"
-output: postcards::trestles
+output: distill::distill_article
 ---
 
 ```{r setup, include=FALSE}
