--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -202,6 +202,10 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos en revistas arbitradas}
 
+\years{2022} \textbf{Gerardo Mart\'in}, Joseph J. Erinjery, Dileepa Ediriweera, David G. Lalloo, H. Janaka de Silva, Takuya Iwamura \& Kris A. Murray. A mechanistic model of snakebite as a zoonosis: envenoming incidence is driven by snake ecology, socioeconomics and its impacts on snakes. \emph{PLoS Neglected Tropical Diseases-En Prensa}. 
+
+\years{2022} \textbf{Gerardo Mart\'in}, Carlos Y\'a\~nez Arenas \& Xavier Chiappa Carrara. Discrepancies between point process models and environmental envelopes identify the niche centroid-geography configuration. \emph{Ecological Modelling}. \url{https://doi.org/10.1016/j.ecolmodel.2022.109974}
+
 \years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk. \emph{Journal of Applied Ecology}. \url{https://doi.org/10.1111/1365-2664.14081}.\\
 
 \years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts. \emph{MedRXiv}. \url{https://doi.org/10.1101/2021.10.01.21264438}.\\
